[gd_scene load_steps=17 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://SqlTextEdit.gd" type="Script" id=2]
[ext_resource path="res://SqlSummeryTextEdit.gd" type="Script" id=3]
[ext_resource path="res://graph/Graph.tscn" type="PackedScene" id=4]
[ext_resource path="res://graph/GraphHolder.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.792157, 0.454902, 0.901961, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="DynamicFontData" id=6]
font_path = "res://JetBrainsMono-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_bottom = 6.0
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
corner_radius_top_left = 6
corner_radius_top_right = 6

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.611765, 0.611765, 0.611765, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=2]
size = 12
use_filter = true
font_data = SubResource( 6 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
HScrollBar/styles/grabber = SubResource( 9 )
HScrollBar/styles/grabber_highlight = SubResource( 9 )
HScrollBar/styles/grabber_pressed = SubResource( 9 )
HScrollBar/styles/scroll = SubResource( 9 )
HScrollBar/styles/scroll_focus = SubResource( 9 )
PanelContainer/styles/panel = SubResource( 7 )
TabContainer/fonts/font = SubResource( 8 )
TabContainer/styles/panel = SubResource( 5 )
TabContainer/styles/tab_bg = SubResource( 12 )
TabContainer/styles/tab_disabled = SubResource( 12 )
TabContainer/styles/tab_fg = SubResource( 12 )
TextEdit/colors/font_color = Color( 0.678431, 0.678431, 0.678431, 1 )
TextEdit/colors/font_color_readonly = Color( 0.678431, 0.678431, 0.678431, 1 )
TextEdit/styles/completion = SubResource( 4 )
TextEdit/styles/focus = SubResource( 4 )
TextEdit/styles/normal = SubResource( 4 )
TextEdit/styles/read_only = SubResource( 4 )
VScrollBar/styles/grabber = SubResource( 10 )
VScrollBar/styles/scroll = SubResource( 11 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="Parser" type="PanelContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 31.0

[node name="Parser" type="VBoxContainer" parent="TabContainer/Parser"]
margin_left = 6.0
margin_top = 6.0
margin_right = 1018.0
margin_bottom = 563.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Parser/Parser"]
margin_right = 1012.0
margin_bottom = 23.0

[node name="Flavours" type="OptionButton" parent="TabContainer/Parser/Parser/HBoxContainer"]
unique_name_in_owner = true
margin_right = 85.0
margin_bottom = 23.0
text = "Flavours"

[node name="Control" type="Control" parent="TabContainer/Parser/Parser/HBoxContainer"]
margin_left = 89.0
margin_right = 954.0
margin_bottom = 23.0
size_flags_horizontal = 3

[node name="Import" type="Button" parent="TabContainer/Parser/Parser/HBoxContainer"]
margin_left = 958.0
margin_right = 1012.0
margin_bottom = 23.0
text = "Import"

[node name="HSplitContainer" type="HBoxContainer" parent="TabContainer/Parser/Parser"]
margin_top = 27.0
margin_right = 1012.0
margin_bottom = 557.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SqlInput" type="TextEdit" parent="TabContainer/Parser/Parser/HSplitContainer"]
unique_name_in_owner = true
margin_right = 504.0
margin_bottom = 530.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "-- --------------------------------------------------------
-- Host:                         127.0.0.1
-- Server version:               10.4.22-MariaDB - mariadb.org binary distribution
-- Server OS:                    Win64
-- HeidiSQL Version:             12.1.0.6537
-- --------------------------------------------------------

/*!40101 SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT */;
/*!40101 SET NAMES utf8 */;
/*!50503 SET NAMES utf8mb4 */;
/*!40103 SET @OLD_TIME_ZONE=@@TIME_ZONE */;
/*!40103 SET TIME_ZONE='+00:00' */;
/*!40014 SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0 */;
/*!40101 SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='NO_AUTO_VALUE_ON_ZERO' */;
/*!40111 SET @OLD_SQL_NOTES=@@SQL_NOTES, SQL_NOTES=0 */;


-- Dumping database structure for vet-db
CREATE DATABASE IF NOT EXISTS `vet-db` /*!40100 DEFAULT CHARACTER SET utf8mb4 */;
USE `vet-db`;

-- Dumping structure for table vet-db.appointment
CREATE TABLE IF NOT EXISTS `appointment` (
  `id` int(11) NOT NULL AUTO_INCREMENT,
  `date` date DEFAULT NULL,
  `time` time DEFAULT NULL,
  `petId` int(11) DEFAULT NULL,
  `vetId` int(11) DEFAULT NULL,
  PRIMARY KEY (`id`),
  KEY `FK_appointment_pet` (`petId`),
  KEY `FK_appointment_vet_doctor` (`vetId`),
  CONSTRAINT `FK_appointment_pet` FOREIGN KEY (`petId`) REFERENCES `pet` (`id`) ON DELETE NO ACTION ON UPDATE NO ACTION,
  CONSTRAINT `FK_appointment_vet_doctor` FOREIGN KEY (`vetId`) REFERENCES `vet_doctor` (`id`) ON DELETE NO ACTION ON UPDATE NO ACTION
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

-- Data exporting was unselected.

-- Dumping structure for table vet-db.bill
CREATE TABLE IF NOT EXISTS `bill` (
  `id` int(11) NOT NULL AUTO_INCREMENT,
  `date` date NOT NULL,
  `amount` decimal(20,6) NOT NULL DEFAULT 0.000000,
  `personId` int(11) NOT NULL DEFAULT 0,
  `petId` int(11) NOT NULL,
  PRIMARY KEY (`id`),
  KEY `FK_bill_person` (`personId`),
  KEY `FK_bill_pet` (`petId`),
  CONSTRAINT `FK_bill_person` FOREIGN KEY (`personId`) REFERENCES `customer` (`id`) ON DELETE NO ACTION ON UPDATE NO ACTION,
  CONSTRAINT `FK_bill_pet` FOREIGN KEY (`petId`) REFERENCES `pet` (`id`) ON DELETE NO ACTION ON UPDATE NO ACTION
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

-- Data exporting was unselected.

-- Dumping structure for table vet-db.customer
CREATE TABLE IF NOT EXISTS `customer` (
  `id` int(11) NOT NULL AUTO_INCREMENT,
  `name` varchar(50) DEFAULT NULL,
  `address` varchar(50) DEFAULT NULL,
  PRIMARY KEY (`id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

-- Data exporting was unselected.

-- Dumping structure for table vet-db.pet
CREATE TABLE IF NOT EXISTS `pet` (
  `id` int(11) NOT NULL AUTO_INCREMENT,
  `name` varchar(50) DEFAULT NULL,
  `owner` int(11) DEFAULT NULL,
  `chip_code` varchar(50) NOT NULL DEFAULT '',
  PRIMARY KEY (`id`),
  UNIQUE KEY `chip_code` (`chip_code`),
  KEY `owner` (`owner`),
  CONSTRAINT `owner` FOREIGN KEY (`owner`) REFERENCES `customer` (`id`) ON DELETE NO ACTION ON UPDATE NO ACTION
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

-- Data exporting was unselected.

-- Dumping structure for table vet-db.vet_doctor
CREATE TABLE IF NOT EXISTS `vet_doctor` (
  `id` int(11) NOT NULL AUTO_INCREMENT,
  `name` int(11) DEFAULT NULL,
  PRIMARY KEY (`id`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;

-- Data exporting was unselected.

/*!40103 SET TIME_ZONE=IFNULL(@OLD_TIME_ZONE, 'system') */;
/*!40101 SET SQL_MODE=IFNULL(@OLD_SQL_MODE, '') */;
/*!40014 SET FOREIGN_KEY_CHECKS=IFNULL(@OLD_FOREIGN_KEY_CHECKS, 1) */;
/*!40101 SET CHARACTER_SET_CLIENT=@OLD_CHARACTER_SET_CLIENT */;
/*!40111 SET SQL_NOTES=IFNULL(@OLD_SQL_NOTES, 1) */;
"
show_line_numbers = true
draw_tabs = true
draw_spaces = true
script = ExtResource( 2 )

[node name="CleanerOutput" type="TextEdit" parent="TabContainer/Parser/Parser/HSplitContainer"]
unique_name_in_owner = true
visible = false
margin_left = 338.0
margin_right = 673.0
margin_bottom = 530.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
show_line_numbers = true
draw_tabs = true
draw_spaces = true
script = ExtResource( 2 )

[node name="ParserOutput" type="TextEdit" parent="TabContainer/Parser/Parser/HSplitContainer"]
unique_name_in_owner = true
margin_left = 508.0
margin_right = 1012.0
margin_bottom = 530.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
show_line_numbers = true
draw_tabs = true
draw_spaces = true
script = ExtResource( 3 )

[node name="Graph" type="PanelContainer" parent="TabContainer"]
visible = false
margin_top = 31.0
margin_right = 12.0
margin_bottom = 12.0

[node name="ViewportContainer" type="ViewportContainer" parent="TabContainer/Graph"]
margin_left = 6.0
margin_top = 6.0
margin_right = 6.0
margin_bottom = 6.0
script = ExtResource( 5 )

[node name="Viewport" type="Viewport" parent="TabContainer/Graph/ViewportContainer"]
size = Vector2( 100, 100 )
handle_input_locally = false
render_target_update_mode = 0
physics_object_picking = true

[node name="Graph" parent="TabContainer/Graph/ViewportContainer/Viewport" instance=ExtResource( 4 )]

[connection signal="pressed" from="TabContainer/Parser/Parser/HBoxContainer/Import" to="." method="_on_Import_pressed"]
[connection signal="visibility_changed" from="TabContainer/Graph" to="TabContainer/Graph/ViewportContainer" method="_on_Graph_visibility_changed"]
